--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1"
   }
 }
